# esnchaos

./: .gitignore  README.md  pyproject.toml  requirements.txt
hybrid_ppr_plots/: .gitignore
hybrid_ppr_plots/EFFECT_OF_DIFFERENT_BAD_KBMS/: all_systems_x5_model.py  all_systems_xxyy_model.py  plot_results_fitted.py
hybrid_ppr_plots/EFFECT_OF_NRAD_FLOW_model/: DoubleScroll_flow_model_effect_of_nrad.py  chen_flow_model_effect_of_nrad.py  chua_flow_model_effect_of_nrad.py  halvorsen_flow_model_effect_of_nrad.py  lorenz_flow_model_effect_of_nrad.py  roessler_flow_model_effect_of_nrad.py  rucklidge_flow_model_effect_of_nrad.py  simulation_dict.py  thomas_flow_model_effect_of_nrad.py  windmi_flow_model_effect_of_nrad.py
hybrid_ppr_plots/EFFECT_OF_NRAD_eps_model/: DoubleScroll_eps_model_effect_of_nrad.py  KS_eps_model_effect_of_nrad.py  chen_eps_model_effect_of_nrad.py  chua_eps_model_effect_of_nrad.py  halvorsen_eps_model_effect_of_nrad.py  lorenz_eps_model_effect_of_nrad.py  roessler_eps_model_effect_of_nrad.py  rucklidge_eps_model_effect_of_nrad.py  simulation_dict.py  thomas_eps_model_effect_of_nrad.py  windmi_eps_model_effect_of_nrad.py
hybrid_ppr_plots/EXPERIMENTS_FOLDER/: env.yml
hybrid_ppr_plots/VISUALIZE_ATTRACTORS/: simulation_dict.py  visualize_attractors.py
hybrid_ppr_plots/VISUALIZE_KBM_CONTRIBUTIONS/: kbm_vs_res_contrbutions.py  simulation_dict.py
mt_plots/: env_info.md  mt_plots_conda_env.yml
tests/: conftest.py  example_sweep_experiment.py  example_sweep_experiment_pccutoff.py  test_df_to_plot.py  test_pkl_to_df.py  test_sweep_experiment.py
(+150 files in other folders)
