[project]
name = "esnchaos"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
dependencies = [
    "numpy==1.21.4",
    "pandas==1.3.4",
    "networkx==2.6.3",
    "scikit-learn==1.1.2",
    "scipy==1.7.2",
    "matplotlib",
    "kaleido",
    "plotly==5.11.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
